<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <CheckBox
        android:id="@+id/checkBoxC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtC"
        android:layout_below="@+id/editText"
        android:layout_alignStart="@+id/checkBoxCpp"
        android:layout_alignEnd="@+id/checkBoxCpp" />

    <CheckBox
        android:id="@+id/checkBoxCpp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/checkBoxJava"
        android:layout_alignStart="@+id/checkBoxJava"
        android:layout_below="@+id/checkBoxC"
        android:text="@string/txtCpp" />

    <CheckBox
        android:id="@+id/checkBoxJava"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtJava"
        android:layout_below="@+id/checkBoxCpp"
        android:layout_alignParentEnd="true" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignStart="@+id/checkBoxJava"
        android:layout_alignEnd="@+id/button">
        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtHomme"
            android:layout_marginTop="60dp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/txtFemme" />
    </RadioGroup>

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/txtNom"
        android:ems="100"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button"
        android:text="@string/txtValider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

</RelativeLayout>